--- a/style/style.css
+++ b/style/style.css
@@ -21,12 +21,11 @@ body{
     font-weight: 600;
 }
 .head-container{
-    padding-bottom: 5rem;
     background: url(/image/dogwalk.webp);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    min-height: 300px;
+    background-position: left center;
+    min-height: 250px;
 }
 .content-display{
     height: 100%;
@@ -40,11 +39,17 @@ body{
 .main .img-show{
     width: 50%;
     min-width:350px;
-    text-align: center;
+    text-align: center !important;
     margin:0 auto;
 
 }
-.img-show img{
+.img-show .spinner{
+    text-align: center !important;
+    margin:0 auto;
+    padding: 0;
+
+}
+.img-show .dog-breed-img{
     width:100%;
     min-width: 350px;
     height: auto;
@@ -106,15 +111,14 @@ body{
   }
   @keyframes spin{
       to{
-          transform: rotateZ(360deg);
+          transform: rotatez(360deg);
       }
   }
   .spinner{
-      text-align: center;
       animation: 1.5s spin linear infinite;
       display: none;
-      border-radius: 50% !important;
-      width: 100% !important;
+      border-radius: 40rem !important;
+      width: 30% !important;
   }
 
   .show{
